// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Favourite /> should display the same view for each render 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Route
    render={[Function]}
/>,
  "nodes": Array [
    <Route
      render={[Function]}
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <withRouter(Favourite) />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {},
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Route
          render={[Function]}
/>,
        "_debugID": 2,
        "_renderedOutput": <Route
          render={[Function]}
/>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <withRouter(Favourite) />,
}
`;

exports[`<Favourite /> should render the same <Favourite /> 1`] = `
<div>
  <section>
    <div
      className="col s12 m6"
    >
      <div
        className="card grey darken-3"
      >
        <div
          className="card-content white-text"
        >
          <span
            className="card-title"
          >
            random title
          </span>
          <p>
            a random description
          </p>
        </div>
        <div
          className="card-action"
          style={
            Object {
              "height": "70px",
            }
          }
        >
          <button
            className="btn right blue lighten-1"
            onClick={[Function]}
          >
            View Article
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<Favourite /> should render the same <FavouritesPage /> each time 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    <withRouter(NavBar)
        user={null}
    />
    <h4
        className="orange-text text-accent-1"
        style={
            Object {
                "paddingLeft": "10px",
              }
        }
    >
        Favourites
    </h4>
    <div
        className="row"
    >
        <withRouter(Favourite)
            favourite={
                Object {
                    "description": "the story of harry porter",
                    "title": "harry porter 10",
                    "url": "http://localhost:8080/favourites",
                  }
            }
        />
    </div>
    <Footer />
</div>,
  "nodes": Array [
    <div>
      <withRouter(NavBar)
            user={null}
      />
      <h4
            className="orange-text text-accent-1"
            style={
                  Object {
                        "paddingLeft": "10px",
                      }
            }
      >
            Favourites
      </h4>
      <div
            className="row"
      >
            <withRouter(Favourite)
                  favourite={
                        Object {
                              "description": "the story of harry porter",
                              "title": "harry porter 10",
                              "url": "http://localhost:8080/favourites",
                            }
                  }
            />
      </div>
      <Footer />
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <FavouritesPage />,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {},
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          <withRouter(NavBar)
                    user={null}
          />
          <h4
                    className="orange-text text-accent-1"
                    style={
                              Object {
                                        "paddingLeft": "10px",
                                      }
                    }
          >
                    Favourites
          </h4>
          <div
                    className="row"
          >
                    <withRouter(Favourite)
                              favourite={
                                        Object {
                                                  "description": "the story of harry porter",
                                                  "title": "harry porter 10",
                                                  "url": "http://localhost:8080/favourites",
                                                }
                              }
                    />
          </div>
          <Footer />
</div>,
        "_debugID": 4,
        "_renderedOutput": <div>
          <withRouter(NavBar)
                    user={null}
          />
          <h4
                    className="orange-text text-accent-1"
                    style={
                              Object {
                                        "paddingLeft": "10px",
                                      }
                    }
          >
                    Favourites
          </h4>
          <div
                    className="row"
          >
                    <withRouter(Favourite)
                              favourite={
                                        Object {
                                                  "description": "the story of harry porter",
                                                  "title": "harry porter 10",
                                                  "url": "http://localhost:8080/favourites",
                                                }
                              }
                    />
          </div>
          <Footer />
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <FavouritesPage />,
}
`;
